# django-app

./: Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
mysite/: demo.py  devices.csv  log.txt  quireis.sql  shopapp-fixtures.json  shopapp-orders_fixtures.json  shopapp-products-fixtures.json  shopapp-products-fixtures.xml
mysite/blogapp/: admin.py  models.py  sitemap.py  urls.py  views.py
mysite/blogapp/management/commands/: create_articles.py  create_author.py  create_categories.py  create_tags.py
mysite/blogapp/migrations/: 0001_initial.py  0002_article_content.py  0003_articledemo.py
mysite/blogapp/templates/blogapp/: article_list.html  articledemo_detail.html  articledemo_list.html
mysite/myapiapp/: serializers.py  urls.py  views.py
mysite/myauth/: forms.py  models.py  tests.py  urls.py  views.py
mysite/myauth/migrations/: 0001_initial.py  0002_profile_avatar.py
mysite/mysite/: settings.py  sitemaps.py  urls.py
mysite/requestdataapp/: apps.py  forms.py  middlewares.py  not_a_virus.txt  urls.py  views.py
mysite/shopapp/: admin.py  admin_mixins.py  common.py  forms.py  models.py  orders.json  serializers.py  sitemap.py  tests.py  urls.py  utils.py  views.py
mysite/shopapp/fixtures/: contenttypes-fixture.json  groups-fixture.json  orders-fixture.json  permissions-fixture.json  products-fixture.json  users-fixture.json
mysite/shopapp/migrations/: 0001_initial.py  0002_order.py  0003_product_created_by.py  0004_order_receipt.py  0005_product_preview.py  0006_productimage.py  0007_alter_order_options_alter_product_options_and_more.py
(+43 files in other folders)
